--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="video">Video</string>
     <string name="movie_backdrop_image">Movie Backdrop Image</string>
     <string name="failed_to_load_data">Failed to load data.</string>
+    <string name="toast_no_internet">No Internet Connection</string>
 </resources>
