--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="movie_backdrop_image">Movie Backdrop Image</string>
     <string name="failed_to_load_data">Failed to load data.</string>
     <string name="toast_no_internet">No Internet Connection</string>
+    <string name="request_cancelled">Request was cancelled</string>
 </resources>
